[gd_scene load_steps=2 format=3 uid="uid://cbe462kp8dal1"]

[ext_resource type="Script" path="res://Scripts/minigame.gd" id="1_m2e5c"]

[node name="Minigame" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2e5c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -30.0
offset_right = 1656.0
offset_bottom = 1320.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 0.317647)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 160.0
offset_top = 80.0
offset_right = 720.0
offset_bottom = 160.0
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 480.0
offset_top = 160.0
offset_right = 800.0
offset_bottom = 240.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 160.0
offset_top = 160.0
offset_right = 240.0
offset_bottom = 240.0
text = "1"

[node name="Button2" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 240.0
offset_top = 160.0
offset_right = 320.0
offset_bottom = 240.0
text = "2
"

[node name="Button3" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 320.0
offset_top = 160.0
offset_right = 400.0
offset_bottom = 240.0
text = "3"

[node name="Button4" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 160.0
offset_top = 240.0
offset_right = 240.0
offset_bottom = 320.0
text = "4"

[node name="Button5" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 240.0
offset_top = 240.0
offset_right = 320.0
offset_bottom = 320.0
text = "5"

[node name="Button6" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 320.0
offset_top = 240.0
offset_right = 400.0
offset_bottom = 320.0
text = "6"

[node name="Button7" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 160.0
offset_top = 320.0
offset_right = 240.0
offset_bottom = 400.0
text = "7"

[node name="Button8" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 240.0
offset_top = 320.0
offset_right = 320.0
offset_bottom = 400.0
text = "8"

[node name="Button9" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 320.0
offset_top = 320.0
offset_right = 400.0
offset_bottom = 400.0
text = "9"

[connection signal="pressed" from="NinePatchRect/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="NinePatchRect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="NinePatchRect/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="NinePatchRect/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="NinePatchRect/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="NinePatchRect/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="NinePatchRect/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="NinePatchRect/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="NinePatchRect/Button9" to="." method="_on_button_9_pressed"]
